--- a/site/package.json
+++ b/site/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toast-notifications": "^2.4.0",
     "serve": "^11.3.0"
